force-app/main/default/objects/Time_Sheet_Entries__c/Time_Sheet_Entries__c.object-meta.xml
<CustomObject>
    <label>Time Sheet Entries</label>
    <nameField>
        <displayFormat>TSE-{000000}</displayFormat>
        <label>Time Sheet Entries</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>