force-app/main/default/objects/Time_Sheet_Entries__c/fields/ADO_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>ADO_Ticket_Number__c</fullName>
    <label>ADO Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>