force-app/main/default/objects/Time_Sheet_Entries__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable Hours</label>
    <type>Checkbox</type>
</CustomField>