force-app/main/default/objects/Time_Sheet_Entries__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultant Time Entries</relationshipLabel>
    <relationshipName>Consultant_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>