force-app/main/default/objects/Time_Sheet_Entries__c/fields/Contract_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pricing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Pricing</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contract Pricing Is Not Active, Update Pricing to new Price</errorMessage>
        <filterItems>
            <field>Contract_Pricing__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only Showing Active Pricing</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract_Pricing__c</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>