force-app/main/default/objects/Time_Sheet_Entries__c/fields/External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Id__c</fullName>
    <formula>Project__r.External_Project_Id__c</formula>
    <label>External Project Id</label>
    <type>Text</type>
</CustomField>