force-app/main/default/objects/Time_Sheet_Entries__c/fields/External_Time_Sheet_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Time_Sheet_Entry_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Time Sheet Entry Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>