force-app/main/default/objects/Time_Sheet_Entries__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>