force-app/main/default/objects/Time_Sheet_Entries__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>