force-app/main/default/objects/Time_Sheet_Entries__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>