force-app/main/default/objects/Time_Sheet_Entries__c/fields/Sum_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Time__c</fullName>
    <formula
  >IF( Billable_Hours__c , (End_Date_Time__c -  Start_Date_Time__c)*24, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>