force-app/main/default/objects/Time_Sheet_Entries__c/fields/Time_Sheet_Cost__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet_Cost__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Sheet Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>