force-app/main/default/objects/Time_Sheet_Entries__c/fields/val_ProjectCompleted__c.field-meta.xml
<CustomField>
    <fullName>val_ProjectCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in a complex validation rule to make sure the project has not been completed. If the project has no more time entries can be inputed</description>
    <label>val_ProjectCompleted</label>
    <type>Checkbox</type>
</CustomField>