force-app/main/default/objects/Time_Sheet_Entries__c/validationRules/Project_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Completed</fullName>
    <active>false</active>
    <errorConditionFormula
  >IF( val_ProjectCompleted__c , TRUE, FALSE)</errorConditionFormula>
    <errorMessage
  >The project has been completed. You can not add or modify any timesheet entries.</errorMessage>
</ValidationRule>